--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,9 @@
                 "ts": "never"
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "@typescript-eslint/no-unused-vars": ["error"],
+        "no-unused-vars": "off",
     },
     "settings": {
         "import/resolver": {
