--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,8 +30,8 @@
             }
         ],
         "prettier/prettier": "error",
-        "@typescript-eslint/no-unused-vars": ["error"],
-        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["off"],
+        "no-unused-vars": "off"
     },
     "settings": {
         "import/resolver": {
