--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
     "moti": "^0.10.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-actions-sheet": "^0.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
