--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,11 +17,11 @@
     "@react-navigation/stack": "^5.14.5",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
-    "moti": "^0.10.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-actions-sheet": "^0.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.1.0",
