--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "expo-local-authentication": "^11.0.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-actions-sheet": "^0.4.2",
@@ -29,6 +30,7 @@
     "react-native-screens": "^3.1.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-tab-view": "2.16.0",
+    "react-native-unimodules": "^0.13.3",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
